// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BibliographicSectionContainer component should render default view 1`] = `
<ContextProvider
  value={
    Object {
      "formValues": Object {},
    }
  }
>
  <Memo(BibliographicSection) />
</ContextProvider>
`;

exports[`BibliographicSectionContainer component should render disabled view 1`] = `
<ContextProvider
  value={
    Object {
      "formValues": Object {},
    }
  }
>
  <Memo(BibliographicSection)
    disabled={true}
  />
</ContextProvider>
`;
